test/types/unions/bad-union-field.chpl
union U {
  param p: int;
  type t;
  var x: t;
  const y: real;
  const a, b, c: real;
  var d = 1;
  var e, f = 2;
  var g;
  var h, i;
  var j: int = 3;
  var k, l: int = 4;
  var m, n: int,
      o, q;
  var r, s = 5,
      u, v;
}
var u: U;
